complete all api except auditQuery requires bugfix